# alexander-haw.github.io

./: Alexander Haw.html  CNAME  Deploy  README.html  README.md  README.rst  _static  conf.py  genindex.html  index.html  index.rst  myFunctions.js  myStyles.css  my_mission.txt  my_site.txt  nz.xcf  objects.inv  old.html  pyproject.toml  resume_alexander_haw.odg  search.html  searchindex.js  skills.txt  template.html.save  test.html  us.xcf
_build/dirhtml/: .buildinfo  objects.inv  searchindex.js
_build/dirhtml/README/: index.html
_build/dirhtml/_sources/: README.rst.txt
_build/dirhtml/genindex/: index.html
_build/dirhtml/search/: index.html
_build/doctrees/: README.doctree  environment.pickle  index.doctree  input.doctree
_build/html/: .buildinfo  README.html  genindex.html  index.html  input.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: README.rst.txt  index.rst.txt
_build/singlehtml/: .buildinfo  input.html  objects.inv
_sources/: README.rst.txt  index.rst.txt
html/: .buildinfo  genindex.html  index.html  search.html
images/: phone_regions.xcf
img/: me.xcf
sources/: README.rst.txt
static/: template.html
static/_static/: bizstyle.js
styles/: alex-haw.css
